<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">AC Hannes 4 life</string>
    <string name="ach_banner">ach_logo</string>
    <string name="app_name">AC Hannes Statistics Tool</string>
    <string name="player_names">Player names</string>
    <string name="opponent_dates">Opponent - Date</string>
    <string name="statistics_item_names">Statistics items</string>
    <string name="add">Add +</string>
    <string name="reduce">Reduce -</string>

</resources>
