<?xml version="1.0" encoding="utf-8"?>
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4.16" >

            <ImageView
                android:id="@+id/banner"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:src="@drawable/icon" />

        </FrameLayout>

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" >

        </TextView>

        <TextView
            android:id="@+id/player_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_names"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <Spinner
            android:id="@+id/player_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/match_opponent_dates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opponent_dates"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/match_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/statistics_item_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_item_names"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/statistics_item_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.51" >

            <Button
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.50"
                android:text="@string/add" />

            <Button
                android:id="@+id/reduce"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.50"
                android:text="@string/reduce" />

        </LinearLayout>

    </TableLayout>
